Fix horizontal scrolling issue and refactor DRY principle issues.

--- a/css/base.css
+++ b/css/base.css
@@ -21,6 +21,7 @@ body {
    font-weight:400;
    line-height:1.5;
    text-align:left;
+   overflow-x:hidden;
 }
 
 a {
